--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -111,8 +111,8 @@
                                     <li><a href="repVentas.html">Ventas</a></li>
                                     <li><a href="reporte_eventos.html">Eventos</a></li>
                                     <li class="divider"></li>
-                                    <li><a href="Reporte_Asignacion_de_Vendedores.html">Asignación de vendedores</a></li>
-                                    <li><a href="reporte_asistencia_vendedores.html">Asistencia</a></li>
+                                    <li><a href="@Url.Action("ReporteAsignacion","CuentaUsuario")">Asignación de vendedores</a></li>
+                                    <li><a href="@Url.Action("ReporteAsistencia","CuentaUsuario")">Asistencia</a></li>
                                     <li><a href="@Url.Action("ReporteCliente", "CuentaUsuario")">Clientes</a></li>
                                 </ul>
                             </li>
